<resources>
    <string name="app_name">Moyo Safi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Settings">Paramètres</string>
    <string name="Bluetooth">Bluetooth</string>
    <string name="Disable">Desactivé</string>
    <string name="Enable">Activé</string>
    <string name="inscription">S\'inscrire</string>
    <string name="Login">Se connecter</string>
    <string name="create">Créer</string>
    <string name="compte">Compte</string>
    <string name="paired_device">Appareil Couplé</string>
    <string name="home">Accueil</string>
    <string name="notifications">Notifications</string>
    <string name="Profile">Profile</string>
</resources>