<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/bluetooth_to_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/Settings"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:drawableLeftCompat ="@drawable/baseline_keyboard_backspace_40"
        android:drawablePadding="10dp"/>

    <TextView
        android:id="@+id/bluetooth_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bluetooth_to_settings"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:text="@string/Bluetooth"
        android:textColor="@color/gray_color"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linear_layout_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/bluetooth_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:padding="20dp"
        android:theme="@style/all_rounded_corners">

        <TextView
            android:id="@+id/text_disable_or_enable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/Disable"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/switch_text_view"
            android:layout_width="62dp"
            android:layout_height="35dp"
            android:gravity="center_horizontal"
            android:drawableLeft="@drawable/group_switch_1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scroll_paired_and_paired_new_device"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_switch"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_connection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"
                android:textSize="18sp"
                android:textColor="@color/third_color"/>

            <TextView
                android:id="@+id/paired_devices_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_connection"
                android:layout_marginTop="20dp"
                android:text="Paired devices"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <ListView
                android:id="@+id/listview_bluetooth_paired"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/paired_devices_text"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                style="@style/MyListViewItemStyle"/>

            <TextView
                android:id="@+id/new_device_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/listview_bluetooth_paired"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/baseline_add_24"
                android:drawablePadding="10dp"
                android:text="Pair new device"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/text_input_stream"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/new_device_name"
                android:layout_marginTop="20dp"
                android:text=""
                android:textSize="18sp"
                android:textColor="@color/principal_color"
                android:gravity="center_vertical"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>