<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fourth_color"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header_create_account_page"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        android:background="@drawable/around_header_login_page">

        <TextView
            android:id="@+id/create_account_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/Login"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:drawableLeftCompat ="@drawable/baseline_arrow_back_24"
            android:drawablePadding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="50dp"
            android:text="@string/create"
            android:textSize="50sp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="50dp"
            android:text="@string/compte"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textColor="@color/third_color"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

          <LinearLayout
            android:id="@+id/create_account_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="30dp"
            android:paddingBottom="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/errorMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:padding="10dp"
                android:gravity="center"
                android:text="les mots de passe ne sont pas identique"
                android:textColor="@color/white"
                android:background="@color/third_color"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/userName"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="60dp"
                android:paddingLeft="20dp"
                android:hint="Nom d'utilisateur"
                android:inputType="text"
                android:textColorHint="@color/gray_c"
                android:textColor="@color/black"
                android:background="@drawable/around_input"/>

            <EditText
                android:id="@+id/pastName"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="60dp"
                android:paddingLeft="20dp"
                android:hint="Post-nom"
                android:inputType="text"
                android:textColorHint="@color/gray_c"
                android:textColor="@color/black"
                android:background="@drawable/around_input"/>

            <EditText
                android:id="@+id/surName"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="60dp"
                android:paddingLeft="20dp"
                android:hint="Prénom"
                android:inputType="text"
                android:textColorHint="@color/gray_c"
                android:textColor="@color/black"
                android:background="@drawable/around_input"/>

              <EditText
                  android:id="@+id/phoneNumber"
                  android:layout_width="300dp"
                  android:layout_height="48dp"
                  android:layout_marginBottom="20dp"
                  android:layout_marginLeft="60dp"
                  android:paddingLeft="20dp"
                  android:inputType="number"
                  android:hint="Numero de téléphone"
                  android:textColorHint="@color/gray_c"
                  android:textColor="@color/black"
                  android:background="@drawable/around_input"/>

            <EditText
                android:id="@+id/mailAddress"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="60dp"
                android:paddingLeft="20dp"
                android:inputType="textEmailAddress"
                android:hint="Adresse mail"
                android:textColorHint="@color/gray_c"
                android:textColor="@color/black"
                android:background="@drawable/around_input"/>

            <RadioGroup
                android:id="@+id/radio_group_gender"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginLeft="60dp"
                android:layout_marginBottom="20dp"
                android:paddingLeft="10dp"
                android:background="@drawable/around_input"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:text="Genre :"
                    android:textSize="18sp"
                    android:textColor="@color/gray_c"/>

                <RadioButton
                    android:id="@+id/radio_btn_man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Masculin"
                    android:textColor="@color/gray_c" />

                <RadioButton
                    android:id="@+id/radio_btn_women"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Féminin"
                    android:textColor="@color/gray_c"/>
            </RadioGroup>

            <EditText
                android:id="@+id/age"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="60dp"
                android:hint="Age"
                android:textColorHint="@color/gray_c"
                android:textColor="@color/black"
                android:inputType="number"
                android:paddingLeft="20dp"
                android:background="@drawable/around_input"/>

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="60dp"
                android:hint="Mot de passe"
                android:textColorHint="@color/gray_c"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:paddingLeft="20dp"
                android:background="@drawable/around_input"/>

            <EditText
                android:id="@+id/userPasswordConfirm"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="60dp"
                android:hint="Confirmer mot de passe"
                android:paddingLeft="20dp"
                android:textColorHint="@color/gray_c"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:background="@drawable/around_input"/>

            <TextView
                android:id="@+id/btn_create_count"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:layout_marginLeft="60dp"
                android:hint="Créer"
                android:textAlignment="center"
                android:textColorHint="@color/white"
                android:background="@drawable/around_submit_btn"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>